Changes for Venice, 0.721 beta ??/??/???? 
=========================================
* Fix Artificial Neural Network functionality
* Allow Settings for graphs to be changed without "toggling" the graph
* Improve performance of Quote Import from File


Bug Fixes:
* Fix Quote Import/Export for locales which use commas as decimal points. (e.g. Germany)

Changes for Venice, 0.72 beta 20/03/2010
=========================================

* Added the ability to save and restore the state and position of windows.
* Added support for downloading quotes from finance.google.com.
* Added the ability to provide a suffix when importing from
  Yahoo quotes. This allows you to download, say, "CBA.AX" as
  "CBA".
* Added Fibonacci indicator
* Improved performance of AdvanceDecline from Database (Reduced number of database queries)


* Bug Fixes:
  - Fixed an off-by-one month error when downloading from float.com.au.
  - Fixed a bug where an exception would be thrown if the user
    clicked in the background.
  - Fixed an off-by-one day error in PointAndFigure chart (bug # 1880869)
  - Fixed bug in GeneticProgramming wher date offsets of 2147483647 did not  
    throw the expected exception. (bug #2929664)
  - Fixed bugs in expression simplify 

Changes for Venice, 0.71 beta 25/Feb/2007
=========================================

* Added support for downloading ASX quotes from float.com.au.

* Updates to Usability:
  - Now warns if you try to import wekeend stock quotes.
    Stock quotes on weekends are not yet supported.

* Watch screens are now saved as XML files in the user's home directory.
  This should make them easier to manage (e.g. backup).

* Bug Fixes:
  - Can now work with volumes greater than 2147483647.
  - Graphing from context menu in watch screen now works (bug #1328197).
  - Importing quotes from Yahoo now works again. They changed the
    date format to one Venice couldn't parse.

Changes for Venice, 0.7 beta 17/Apr/2006
========================================
