@@ -44,7 +44,7 @@ in Venice. For charting see <link to="Graphs">Graphs</link>.
 </para>
 </help>
 
-<text>Merchant of Venice, 0.71 beta / 21/Mar/2010
+<text>Merchant of Venice, 0.72 beta / 21/Mar/2010
 ===========================================
 
 Copyright (C) 2003-10, Andrew Leppard (aleppard picknowl com au)
