@@ -105,6 +105,7 @@
 			      <li>Chart Relative Strength Index (RSI)</li>
 			      <li>Chart Standard Deviation</li>
                               <li>Chart an index of a group of any stocks</li>
+			      <li>Chart Fibonacci indicator</li>
                               <li>Chart custom indicators</li>
 			    </ul>
 
