@@ -92,7 +92,7 @@
 			  <ul>
 			    <li>Drag & Drop</li>
 			    <li>Improved Internationalisation/Localisation</li>
-			    <li>Integrated Help</li>
+			    <li>Integrated Help</li>			    
 			  </ul>
 
 			  <p><h3>Basic Functionality</h3>
@@ -107,7 +107,7 @@
 			    <li>Integration with <a href="http://www.interactivebrokers.com">Interactive Brokers</a></li>
 			    <li>More support for Intra-Day / Real-Time Quote Data</li>
                             <li>Semi-log Graphs</li>
-			    <li>Support for Drawing Lines, Text & Arrows on Graphs</li>
+			    <li>Support for Drawing Lines, Text & Arrows on Graphs (Now Implemented)</li>
                             <li>Support for specifying chart colour and style</li>
 			    <li>Support for Multiple Stock Exchanges</li>
 			    <li>Support for Weekly, Fortnightly & Monthly Graphs</li>
